syntax = "proto3";

package api.meals.recipe.v1alpha1;

import "api/types/permission_level.proto";
import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  security_definitions: {
    security: {
      key: "BearerAuth"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Bearer token for authentication"
      }
    }
  }
  security: {
    security_requirement: {
      key: "BearerAuth"
      value: {}
    }
  }
};

// The recipe recipient list service
service RecipeRecipientsService {
  // Get the list of recipients for a recipe
  rpc GetRecipeRecipients(GetRecipeRecipientsRequest) returns (RecipeRecipients) {
    option (google.api.method_signature) = "name";
    option (google.api.http) = {
      get: "/meals/v1alpha1/{name=recipes/*}/recipeRecipients"
      additional_bindings: {get: "/meals/v1alpha1/{name=circles/*/recipes/*}/recipeRecipients"}
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get recipe recipients"
      description: "Retrieves the list of recipients for a specific recipe."
      tags: "RecipeRecipientsService"
      parameters: {
        headers: {
          name: "X-Daylear-Circle"
          description: "the name of the circle to act as"
          type: STRING
        }
      }
    };
  }
}

// The recipe recipient list resource
message RecipeRecipients {
  option (google.api.resource) = {
    type: "api.meals.recipe.v1alpha1/RecipeRecipients"
    pattern: "recipes/{recipe}/recipeRecipients"
    pattern: "circles/{circle}/recipes/{recipe}/recipeRecipients"
    plural: "recipeRecipients"
    singular: "recipeRecipient"
  };

  // The name of the recipe recipient list
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  // The list of recipients
  repeated Recipient recipients = 2 [(google.api.field_behavior) = OUTPUT_ONLY];

  message Recipient {
    // The name of the recipient
    string name = 1 [(google.api.field_behavior) = OUTPUT_ONLY];

    // title of the recipient
    string title = 2 [(google.api.field_behavior) = OUTPUT_ONLY];

    // The permission of the recipient
    api.types.PermissionLevel permission = 3 [(google.api.field_behavior) = OUTPUT_ONLY];
  }
}

// The request to get a recipe recipient list
message GetRecipeRecipientsRequest {
  // The name of the recipe recipient list to get
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.meals.recipe.v1alpha1/RecipeRecipients"
  ];
}
